ci: simplify Backstop operations (#78)

--- a/.github/workflows/backstop.yml
+++ b/.github/workflows/backstop.yml
@@ -26,11 +26,10 @@ jobs:
       uses: allenevans/set-env@v1.1.0
       with:
         BASE_URL: ${{ steps.netlify.outputs.url }}
-    - name: Install dependencies and run visual regression tests
+    - name: Install dependencies, generate reference images, run visual regression tests
       run: |
         npm i
-        npm i -g backstopjs
-        npm run test:backstop
+        npm run backstop:test
       env:
         CI: true
     - name: Upload report as downloadable artifact
@@ -46,14 +45,34 @@ jobs:
       if: always()
       run: |
         sudo apt-get install jq
-        printf "**Visual Regression Test Results**\n\n" > backstop_data/json_report/report.md
+        printf "## Visual Regression Test Results\n\n" > backstop_data/json_report/report.md
         cat backstop_data/json_report/jsonReport.json | jq '.tests' | jq -r 'group_by(.status) | map(if .[0].status == "pass" then "✅ \(length) scenarios passed" else "❌ \(length) scenarios failed" end) | join(", ")' >> backstop_data/json_report/report.md
         printf "\n<details><summary>Scenario Details</summary>\n" >> backstop_data/json_report/report.md
-        cat backstop_data/json_report/jsonReport.json | jq '.tests' | jq -r 'map(if .status == "fail" then "❌ \(.pair.label) (\(.pair.viewportLabel)) &mdash; <a href=\"\(.pair.referenceUrl)\">Before</a> / <a href=\"\(.pair.url)\">After</a> (\(.pair.diff.misMatchPercentage)% mismatch)" else "✅ \(.pair.label) (\(.pair.viewportLabel) &mdash; <a href=\"\(.pair.referenceUrl)\">Before</a> / <a href=\"\(.pair.url)\">After</a>" end) | join("<br />")' >> backstop_data/json_report/report.md
-        printf "</details>\n\nTo review the full report with screenshots, visit [the Github Actions page](https://github.com/inclusive-design/idrc/actions/runs/$GITHUB_RUN_ID) and download the _backstop-report_ artifact.\n\nIf these changes were intended, run \`npm run backstop:test && npm run backstop:approve\` locally and commit your changes." >> backstop_data/json_report/report.md
-    - uses: machine-learning-apps/pr-comment@master
+        cat backstop_data/json_report/jsonReport.json | jq '.tests' | jq -r 'map(if .status == "fail" then "❌ \(.pair.label) (\(.pair.viewportLabel)) &mdash; <a href=\"\(.pair.referenceUrl)\">Before</a> / <a href=\"\(.pair.url)\">After</a> (\(.pair.diff.misMatchPercentage)% mismatch)" else "✅ \(.pair.label) (\(.pair.viewportLabel)) &mdash; <a href=\"\(.pair.referenceUrl)\">Before</a> / <a href=\"\(.pair.url)\">After</a>" end) | join("<br />")' >> backstop_data/json_report/report.md
+        printf "</details>\n\n" >> backstop_data/json_report/report.md
+        printf "To review the full report with screenshots, visit [the Github Actions page](https://github.com/inclusive-design/idrc/actions/runs/$GITHUB_RUN_ID) and download the _backstop-report_ artifact.\n\n" >> backstop_data/json_report/report.md
+        printf "If these changes were intended, run \`npm run backstop:test-docker && npm run backstop:approve\` locally and commit your changes." >> backstop_data/json_report/report.md
+    - name: Retrieve comment body
       if: always()
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      id: retrieve-comment-body
+      run: |
+          body=$(cat backstop_data/json_report/report.md)
+          body="${body//'%'/'%25'}"
+          body="${body//$'\n'/'%0A'}"
+          body="${body//$'\r'/'%0D'}"
+          echo ::set-output name=body::$body
+    - name: Find existing comment
+      uses: peter-evans/find-comment@v1
+      if: always()
+      id: fc
       with:
-        path: backstop_data/json_report/report.md
+        issue-number: ${{ github.event.number }}
+        body-includes: Visual Regression Test Results
+    - name: Create comment
+      uses: peter-evans/create-or-update-comment@v1
+      if: always()
+      with:
+        issue-number: ${{ github.event.number }}
+        body: ${{ steps.retrieve-comment-body.outputs.body }}
+        comment-id: ${{ steps.fc.outputs.comment-id }}
+        edit-mode: replace
