feat: add two-thirds width sections

--- a/src/admin/config.yml
+++ b/src/admin/config.yml
@@ -62,6 +62,7 @@ collections:
                   - { label: "Yellow 500", value: "yellow-500" }
                 default: ["indigo-100"]
                 required: false
+              - {label: "Full Bleed Background", name: "fullBleed", widget: "boolean", default: false}
               - label: "Border Colour"
                 name: "borderColor"
                 widget: "select"
@@ -111,9 +112,10 @@ collections:
                 name: "desktopWidth"
                 widget: "select"
                 options:
-                  - { label: "Half", value: "half" }
-                  - { label: "Full", value: "full" }
-                  - { label: "Full Bleed", value: "full-bleed" }
+                - { label: "Third", value: "third" }
+                - { label: "Half", value: "half" }
+                - { label: "Two Thirds", value: "two-thirds" }
+                - { label: "Full", value: "full" }
                 default: ["full"]
                 required: true
               - label: "Subsection Header Level"
@@ -274,6 +276,7 @@ collections:
               - { label: "Yellow 500", value: "yellow-500" }
             default: ["indigo-100"]
             required: false
+          - {label: "Full Bleed Background", name: "fullBleed", widget: "boolean", default: false}
           - label: "Border Colour"
             name: "borderColor"
             widget: "select"
@@ -325,8 +328,8 @@ collections:
             options:
               - { label: "Third", value: "third" }
               - { label: "Half", value: "half" }
+              - { label: "Two Thirds", value: "two-thirds" }
               - { label: "Full", value: "full" }
-              - { label: "Full Bleed", value: "full-bleed" }
             default: ["full"]
             required: false
           - label: "Subsection Header Level"
@@ -417,20 +420,20 @@ collections:
       - {label: "Link", name: "link", widget: "string", required: true}
       - {label: "Body", name: "body", widget: "markdown", required: false}
   - name: "tools"
-      label: "Tools"
-      label_singular: "Tool"
-      folder: "src/tools"
-      slug: "{{slug}}"
-      preview_path: "/tools/{{slug}}"
-      create: true
-      fields:
-        - {label: "Layout", name: "layout", widget: "hidden", default: "layouts/base.njk"}
-        - {label: "Title", name: "title", widget: "string", required: true}
-        - {label: "Short Name", name: "shortName", widget: "string", required: false}
-        - {label: "Description", name: "description", widget: "markdown", required: true}
-        - {label: "Tags", name: "tags", widget: "list", required: false}
-        - {label: "Link", name: "link", widget: "string", required: true}
-        - {label: "Body", name: "body", widget: "markdown", required: false}
+    label: "Tools"
+    label_singular: "Tool"
+    folder: "src/tools"
+    slug: "{{slug}}"
+    preview_path: "/tools/{{slug}}"
+    create: true
+    fields:
+      - {label: "Layout", name: "layout", widget: "hidden", default: "layouts/base.njk"}
+      - {label: "Title", name: "title", widget: "string", required: true}
+      - {label: "Short Name", name: "shortName", widget: "string", required: false}
+      - {label: "Description", name: "description", widget: "markdown", required: true}
+      - {label: "Tags", name: "tags", widget: "list", required: false}
+      - {label: "Link", name: "link", widget: "string", required: true}
+      - {label: "Body", name: "body", widget: "markdown", required: false}
   - label: "Globals"
     name: "globals"
     files:
