--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "backstop:test": "backstop test --config=backstop.config.js",
     "backstop:test-docker": "backstop test --docker --config=backstop.config.js",
     "backstop:approve": "backstop approve --config=backstop.config.js",
+    "cypress:open": "cypress open",
+    "cypress:run": "cypress run",
     "build:site": "ELEVENTY_ENV=production eleventy",
     "build:bundle": "rollup --config",
     "build": "run-s clean build:*",
@@ -21,6 +23,7 @@
     "lint": "run-s lint:*",
     "test:lint": "run-s lint:*",
     "test:backstop": "run-s backstop:test",
+    "test:integration": "start-server-and-test start http://localhost:3000 cypress:run",
     "test": "run-s test:*",
     "watch": "ELEVENTY_ENV=development eleventy --serve --port=3000"
   },
@@ -63,6 +66,7 @@
     "backstopjs": "^5.0.6",
     "clean-css": "^4.2.3",
     "cssesc": "^3.0.0",
+    "cypress": "^5.2.0",
     "dotenv": "^8.2.0",
     "eleventy-plugin-error-overlay": "^0.1.2",
     "eslint-config-xo-react": "^0.23.0",
@@ -85,6 +89,7 @@
     "rollup-plugin-json": "^4.0.0",
     "rollup-plugin-node-resolve": "^5.2.0",
     "slugify": "^1.4.0",
+    "start-server-and-test": "^1.11.3",
     "stylelint": "^13.2.1",
     "stylelint-config-standard-scss": "^1.1.0",
     "stylelint-order": "^4.0.0",
