ci: add wait-on and start command

--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -20,3 +20,6 @@ jobs:
         CI: true
     - name: Run Cypress
       uses: cypress-io/github-action@v2
+      with:
+        start: npm start
+        wait-on: 'http://localhost:3000'
