--- a/src/admin/config.yml
+++ b/src/admin/config.yml
@@ -62,6 +62,7 @@ collections:
                   - { label: "Yellow 500", value: "yellow-500" }
                 default: ["indigo-100"]
                 required: false
+              - {label: "Full Bleed Background", name: "fullBleed", widget: "boolean", default: false}
               - label: "Border Colour"
                 name: "borderColor"
                 widget: "select"
@@ -111,10 +112,20 @@ collections:
                 name: "desktopWidth"
                 widget: "select"
                 options:
-                  - { label: "Half", value: "half" }
-                  - { label: "Full", value: "full" }
-                  - { label: "Full Bleed", value: "full-bleed" }
+                - { label: "Third", value: "third" }
+                - { label: "Half", value: "half" }
+                - { label: "Two Thirds", value: "two-thirds" }
+                - { label: "Full", value: "full" }
                 default: ["full"]
+                required: true
+              - label: "Subsection Header Level"
+                name: "subsectionLevel"
+                widget: "select"
+                options:
+                  - { label: "None", value: "0"}
+                  - { label: "3", value: "H3" }
+                  - { label: "4", value: "H4" }
+                default: ["0"]
                 required: true
       - name: history
         label: "History"
@@ -265,6 +276,7 @@ collections:
               - { label: "Yellow 500", value: "yellow-500" }
             default: ["indigo-100"]
             required: false
+          - {label: "Full Bleed Background", name: "fullBleed", widget: "boolean", default: false}
           - label: "Border Colour"
             name: "borderColor"
             widget: "select"
@@ -316,10 +328,19 @@ collections:
             options:
               - { label: "Third", value: "third" }
               - { label: "Half", value: "half" }
+              - { label: "Two Thirds", value: "two-thirds" }
               - { label: "Full", value: "full" }
-              - { label: "Full Bleed", value: "full-bleed" }
             default: ["full"]
             required: false
+          - label: "Subsection Header Level"
+            name: "subsectionLevel"
+            widget: "select"
+            options:
+              - { label: "None", value: "0"}
+              - { label: "3", value: "H3" }
+              - { label: "4", value: "H4" }
+            default: ["0"]
+            required: true
       - {label: "Body", name: "body", widget: "markdown", required: false}
   - name: "news"
     label: "News"
