--- a/package.json
+++ b/package.json
@@ -98,7 +98,8 @@
     "@11ty/eleventy-plugin-rss": "^1.0.9",
     "d3-selection": "^2.0.0",
     "eleventy-plugin-pwa": "^1.0.8",
-    "eleventy-plugin-sharp": "0.0.3",
-    "glob": "^7.1.6"
+    "eleventy-plugin-sharp": "^0.0.3",
+    "glob": "^7.1.6",
+    "infusion": "^3.0.0-dev.20200326T173810Z.24ddb2718"
   }
 }
