--- a/package.json
+++ b/package.json
@@ -10,11 +10,10 @@
     "backstop:test-docker": "backstop test --docker --config=backstop.config.js",
     "backstop:approve": "backstop approve --config=backstop.config.js",
     "build:webpack": "mix --production",
-    "build:eleventy": "ELEVENTY_ENV=production eleventy",
+    "build:eleventy": "cross-env ELEVENTY_ENV=production eleventy",
     "build:bundle": "rollup --config",
-    "build": "run-s clean build:*",
-    "clean": "run-p clean:*",
-    "clean:dist": "rimraf dist",
+    "build": "npm-run-all -l clean build:*",
+    "clean": "rimraf dist",
     "debug": "DEBUG=Eleventy* eleventy",
     "lint:css": "stylelint src/scss/**/*.scss",
     "lint:js": "xo",
@@ -24,7 +23,7 @@
     "test": "run-s test:*",
     "start": "npm-run-all -l clean build:bundle -p start:*",
     "start:webpack": "mix watch",
-    "start:eleventy": "cross-env NODE_ENV=development eleventy --serve"
+    "start:eleventy": "cross-env ELEVENTY_ENV=development eleventy --serve"
   },
   "repository": {
     "type": "git",
@@ -60,6 +59,7 @@
     "@tbranyen/jsdom": "^13.0.0",
     "babel-loader": "^8.1.0",
     "backstopjs": "^5.0.6",
+    "cross-env": "^7.0.3",
     "dotenv": "^8.2.0",
     "eleventy-plugin-error-overlay": "^0.1.2",
     "eslint-config-xo-react": "^0.23.0",
@@ -75,7 +75,7 @@
     "npm-run-all": "^4.1.5",
     "nunjucks": "^3.2.1",
     "postcss": "^8.2.2",
-    "resolve-url-loader": "^3.1.0",
+    "resolve-url-loader": "^3.1.2",
     "rimraf": "^3.0.2",
     "rollup": "^2.6.1",
     "rollup-plugin-commonjs": "^10.1.0",
