--- a/package.json
+++ b/package.json
@@ -9,20 +9,21 @@
     "backstop:test": "backstop test --config=backstop.config.js",
     "backstop:test-docker": "backstop test --docker --config=backstop.config.js",
     "backstop:approve": "backstop approve --config=backstop.config.js",
-    "build:site": "ELEVENTY_ENV=production eleventy",
+    "build:webpack": "mix --production",
+    "build:eleventy": "cross-env ELEVENTY_ENV=production eleventy",
     "build:bundle": "rollup --config",
-    "build": "run-s clean build:*",
-    "clean": "run-p clean:*",
-    "clean:dist": "rimraf dist",
+    "build": "npm-run-all -l clean build:*",
+    "clean": "rimraf dist",
     "debug": "DEBUG=Eleventy* eleventy",
-    "start": "npm run clean && npm run build:bundle && npm run watch",
-    "lint:css": "stylelint src/scss/**/*.scss",
+    "lint:css": "stylelint src/assets/styles/**/*.scss",
     "lint:js": "xo",
     "lint": "run-s lint:*",
     "test:lint": "run-s lint:*",
     "test:backstop": "run-s backstop:test",
     "test": "run-s test:*",
-    "watch": "ELEVENTY_ENV=development eleventy --serve --port=3000"
+    "start": "npm-run-all -l clean build:bundle -p start:*",
+    "start:webpack": "mix watch",
+    "start:eleventy": "cross-env ELEVENTY_ENV=development eleventy --serve"
   },
   "repository": {
     "type": "git",
@@ -44,25 +45,21 @@
     }
   },
   "lint-staged": {
-    "src/scss/**/*.scss": [
+    "src/assets/styles/**/*.scss": [
       "stylelint"
     ],
-    "src/js/**/*.js": [
+    "src/assets/scripts/**/*.js": [
       "xo"
     ]
   },
   "devDependencies": {
-    "@babel/plugin-transform-runtime": "^7.11.0",
-    "@babel/preset-env": "^7.11.0",
     "@commitlint/cli": "^8.3.5",
     "@commitlint/config-conventional": "^8.3.4",
     "@erquhart/rollup-plugin-node-builtins": "^2.1.5",
     "@tbranyen/jsdom": "^13.0.0",
-    "autoprefixer": "^9.8.6",
     "babel-loader": "^8.1.0",
     "backstopjs": "^5.0.6",
-    "clean-css": "^4.2.3",
-    "cssesc": "^3.0.0",
+    "cross-env": "^7.0.3",
     "dotenv": "^8.2.0",
     "eleventy-plugin-error-overlay": "^0.1.2",
     "eslint-config-xo-react": "^0.23.0",
@@ -71,25 +68,26 @@
     "html-minifier": "^4.0.0",
     "husky": "^4.2.3",
     "image-size": "^0.8.3",
+    "laravel-mix": "^6.0.6",
     "lint-staged": "^10.0.8",
-    "make-dir-cli": "^2.0.0",
-    "memory-fs": "^0.5.0",
+    "move-file": "^2.0.0",
     "node-sass": "^4.14.1",
     "npm-run-all": "^4.1.5",
     "nunjucks": "^3.2.1",
-    "postcss": "^7.0.32",
-    "resolve-url-loader": "^3.1.0",
+    "postcss": "^8.2.2",
+    "resolve-url-loader": "^3.1.2",
     "rimraf": "^3.0.2",
     "rollup": "^2.6.1",
     "rollup-plugin-commonjs": "^10.1.0",
     "rollup-plugin-json": "^4.0.0",
     "rollup-plugin-node-resolve": "^5.2.0",
+    "sass": "^1.32.0",
+    "sass-loader": "^8.0.2",
     "slugify": "^1.4.0",
     "stylelint": "^13.2.1",
     "stylelint-config-standard-scss": "^1.1.0",
     "stylelint-order": "^4.0.0",
     "stylelint-scss": "^3.15.0",
-    "webpack": "^4.44.1",
     "xo": "^0.33.0"
   },
   "dependencies": {
