--- a/package.json
+++ b/package.json
@@ -56,7 +56,6 @@
     "@commitlint/cli": "^8.3.5",
     "@commitlint/config-conventional": "^8.3.4",
     "@erquhart/rollup-plugin-node-builtins": "^2.1.5",
-    "@fluid-project/eleventy-plugin-fluid": "fluid-project/eleventy-plugin-fluid#ce1fbfd",
     "@tbranyen/jsdom": "^13.0.0",
     "babel-loader": "^8.1.0",
     "backstopjs": "^5.0.7",
@@ -95,6 +94,7 @@
     "@11ty/eleventy-navigation": "^0.1.6",
     "@11ty/eleventy-plugin-rss": "^1.0.9",
     "d3-selection": "^2.0.0",
+    "eleventy-plugin-fluid": "0.1.0",
     "eleventy-plugin-pwa": "^1.0.8",
     "eleventy-plugin-sharp": "0.0.3",
     "glob": "^7.1.6"
