--- a/package.json
+++ b/package.json
@@ -94,6 +94,7 @@
     "@11ty/eleventy-navigation": "^0.1.6",
     "@11ty/eleventy-plugin-rss": "^1.0.9",
     "d3-selection": "^2.0.0",
+    "eleventy-plugin-fluid": "0.1.0",
     "eleventy-plugin-pwa": "^1.0.8",
     "eleventy-plugin-sharp": "0.0.3",
     "glob": "^7.1.6"
