--- a/.github/workflows/backstop.yml
+++ b/.github/workflows/backstop.yml
@@ -5,7 +5,7 @@ on: [pull_request]
 jobs:
   backstop:
     name: Run visual regression tests
-    if: github.repository_owner == 'inclusive-design' && github.actor != 'dependabot'
+    if: github.repository_owner == 'inclusive-design' &&  && !contains(github.event.head_commit.message, 'chore(deps')
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
