--- a/.github/workflows/lighthouse.yml
+++ b/.github/workflows/lighthouse.yml
@@ -5,7 +5,7 @@ on: [pull_request]
 jobs:
   lhci-mobile:
     name: Run mobile Lighthouse CI audits
-    if: github.repository_owner == 'inclusive-design' && github.actor != 'dependabot'
+    if: github.repository_owner == 'inclusive-design' && !contains(github.event.head_commit.message, 'chore(deps')
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
@@ -26,7 +26,7 @@ jobs:
         configPath: ./.lighthouserc.js
   lhci-desktop:
     name: Run desktop Lighthouse CI audits
-    if: github.repository_owner == 'inclusive-design' && github.actor != 'dependabot'
+    if: github.repository_owner == 'inclusive-design' && !contains(github.event.head_commit.message, 'chore(deps')
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
