--- a/.github/workflows/lighthouse.yml
+++ b/.github/workflows/lighthouse.yml
@@ -26,7 +26,7 @@ jobs:
         configPath: ./.lighthouserc.js
   lhci-desktop:
     name: Run desktop Lighthouse CI audits
-    if: github.repository_owner == 'inclusive-design' && !contains(github.event.head_commit.message, 'chore(deps')
+    if: github.repository_owner == 'inclusive-design' && github.actor != 'dependabot[bot]'
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
