feat: add improved http security headers

--- a/netlify.toml
+++ b/netlify.toml
@@ -9,3 +9,11 @@
   publish = "dist"
   autoLaunch = true
   framework = "#custom"
+
+[[headers]]
+  for = "/*"
+  [headers.values]
+    Content-Security-Policy = "default-src 'self';"
+    X-Content-Type-Options = "nosniff"
+    X-Frame-Options = "DENY"
+    X-XSS-Protection = "1; mode=block"
