fix: restore CMS functionality

--- a/src/admin/config.yml
+++ b/src/admin/config.yml
@@ -1,6 +1,7 @@
 backend:
   name: git-gateway
   branch: main
+local_backend: true
 publish_mode: editorial_workflow
 site_url: "https://idrc.ocadu.ca"
 media_folder: "src/media"
