--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "build": "npm-run-all -l clean build:*",
     "clean": "rimraf dist",
     "debug": "DEBUG=Eleventy* eleventy",
+    "dev": "cross-env ELEVENTY_ENV=development eleventy --serve",
     "lint:css": "stylelint src/assets/styles/**/*.scss",
     "lint:js": "xo",
     "lint": "run-s lint:*",
@@ -23,7 +24,7 @@
     "test": "run-s test:*",
     "start": "npm-run-all -l clean build:bundle -p start:*",
     "start:webpack": "mix watch",
-    "start:eleventy": "cross-env ELEVENTY_ENV=development eleventy --serve"
+    "start:eleventy": "concurrently \"npm run dev\" \"netlify-cms-proxy-server\""
   },
   "repository": {
     "type": "git",
@@ -59,6 +60,7 @@
     "@tbranyen/jsdom": "^13.0.0",
     "babel-loader": "^8.1.0",
     "backstopjs": "^5.0.7",
+    "concurrently": "^6.2.0",
     "cross-env": "^7.0.3",
     "dotenv": "^8.2.0",
     "eleventy-plugin-error-overlay": "^0.1.2",
@@ -71,6 +73,7 @@
     "laravel-mix": "^6.0.11",
     "lint-staged": "^10.5.4",
     "move-file": "^2.0.0",
+    "netlify-cms-proxy-server": "^1.3.18",
     "npm-run-all": "^4.1.5",
     "nunjucks": "^3.2.3",
     "postcss": "^8.2.2",
