--- a/package.json
+++ b/package.json
@@ -57,7 +57,7 @@
     "@commitlint/cli": "^8.3.5",
     "@commitlint/config-conventional": "^12.0.1",
     "@erquhart/rollup-plugin-node-builtins": "^2.1.5",
-    "@tbranyen/jsdom": "^13.0.0",
+    "jsdom": "^13.0.0",
     "babel-loader": "^8.1.0",
     "backstopjs": "^5.0.7",
     "concurrently": "^6.2.0",
