--- a/package.json
+++ b/package.json
@@ -57,8 +57,8 @@
     "@commitlint/cli": "^8.3.5",
     "@commitlint/config-conventional": "^12.0.1",
     "@erquhart/rollup-plugin-node-builtins": "^2.1.5",
+    "backstopjs": "^5.3.4",
     "babel-loader": "^8.1.0",
-    "backstopjs": "^5.0.7",
     "concurrently": "^6.2.0",
     "cross-env": "^7.0.3",
     "dotenv": "^8.2.0",
@@ -66,6 +66,7 @@
     "eslint-config-xo-react": "^0.24.0",
     "eslint-plugin-react": "^7.24.0",
     "eslint-plugin-react-hooks": "^4.2.0",
+    "glob": "^7.1.6",
     "html-minifier": "^4.0.0",
     "husky": "^4.3.8",
     "image-size": "^1.0.0",
@@ -99,7 +100,6 @@
     "d3-selection": "^2.0.0",
     "eleventy-plugin-fluid": "0.2.0",
     "eleventy-plugin-pwa": "^1.0.8",
-    "eleventy-plugin-sharp": "0.0.3",
-    "glob": "^7.1.6"
+    "eleventy-plugin-sharp": "0.0.3"
   }
 }
