--- a/package.json
+++ b/package.json
@@ -54,52 +54,52 @@
     ]
   },
   "devDependencies": {
-    "@commitlint/cli": "^8.3.5",
-    "@commitlint/config-conventional": "^12.0.1",
+    "@commitlint/cli": "^13.2.1",
+    "@commitlint/config-conventional": "^13.2.0",
     "@erquhart/rollup-plugin-node-builtins": "^2.1.5",
-    "backstopjs": "^5.3.4",
-    "babel-loader": "^8.1.0",
-    "concurrently": "^6.2.0",
+    "backstopjs": "^5.4.4",
+    "babel-loader": "^8.2.3",
+    "concurrently": "^6.3.0",
     "cross-env": "^7.0.3",
-    "dotenv": "^8.2.0",
+    "dotenv": "^10.0.0",
     "eleventy-plugin-error-overlay": "^0.1.2",
     "eslint-config-xo-react": "^0.25.0",
-    "eslint-plugin-react": "^7.24.0",
+    "eslint-plugin-react": "^7.26.1",
     "eslint-plugin-react-hooks": "^4.2.0",
-    "glob": "^7.1.7",
+    "glob": "^7.2.0",
     "html-minifier": "^4.0.0",
     "husky": "^4.3.8",
     "image-size": "^1.0.0",
-    "jsdom": "^13.0.0",
-    "laravel-mix": "^6.0.19",
-    "lint-staged": "^10.5.4",
+    "jsdom": "^18.0.0",
+    "laravel-mix": "^6.0.35",
+    "lint-staged": "^11.2.6",
     "move-file": "^2.0.0",
-    "netlify-cms-proxy-server": "^1.3.18",
+    "netlify-cms-proxy-server": "^1.3.21",
     "npm-run-all": "^4.1.5",
     "nunjucks": "^3.2.3",
-    "postcss": "^8.3.5",
+    "postcss": "^8.3.11",
     "resolve-url-loader": "^3.1.4",
     "rimraf": "^3.0.2",
-    "rollup": "^2.52.3",
+    "rollup": "^2.58.3",
     "rollup-plugin-commonjs": "^10.1.0",
     "rollup-plugin-json": "^4.0.0",
     "rollup-plugin-node-resolve": "^5.2.0",
-    "sass": "^1.35.1",
-    "sass-loader": "^11.1.1",
-    "slugify": "^1.5.3",
+    "sass": "^1.43.4",
+    "sass-loader": "^12.3.0",
+    "slugify": "^1.6.1",
     "stylelint": "^13.13.1",
     "stylelint-config-standard-scss": "^1.1.0",
     "stylelint-order": "^4.1.0",
-    "stylelint-scss": "^3.19.0",
-    "xo": "^0.33.0"
+    "stylelint-scss": "^3.21.0",
+    "xo": "^0.39.1"
   },
   "dependencies": {
-    "@11ty/eleventy": "^0.11.1",
-    "@11ty/eleventy-navigation": "^0.1.6",
-    "@11ty/eleventy-plugin-rss": "^1.0.9",
-    "d3-selection": "^2.0.0",
-    "eleventy-plugin-fluid": "0.2.0",
+    "@11ty/eleventy": "^0.12.1",
+    "@11ty/eleventy-navigation": "^0.3.2",
+    "@11ty/eleventy-plugin-rss": "^1.1.2",
+    "d3-selection": "^3.0.0",
+    "eleventy-plugin-fluid": "0.3.1",
     "eleventy-plugin-pwa": "^1.0.8",
-    "eleventy-plugin-sharp": "0.0.3"
+    "eleventy-plugin-sharp": "^0.0.3"
   }
 }
