--- a/src/ideas/ideas.json
+++ b/src/ideas/ideas.json
@@ -2,5 +2,6 @@
     "layout": "layouts/single--idea.njk",
     "permalink": "/ideas/{{ title | slug }}/",
     "headerBgColor": "white",
-    "author": "IDRC Team"
+    "author": "IDRC Team",
+    "thumbnailImage": "/media/default.png"
 }
