--- a/package.json
+++ b/package.json
@@ -94,13 +94,13 @@
     "xo": "^0.33.0"
   },
   "dependencies": {
-    "@11ty/eleventy": "^0.11.1",
-    "@11ty/eleventy-navigation": "^0.1.6",
-    "@11ty/eleventy-plugin-rss": "^1.0.9",
-    "d3-selection": "^2.0.0",
-    "eleventy-plugin-fluid": "0.2.0",
-    "eleventy-plugin-pwa": "^1.0.8",
-    "eleventy-plugin-sharp": "^0.0.3",
-    "infusion": "dev"
+    "@11ty/eleventy": "0.12.1",
+    "@11ty/eleventy-navigation": "0.3.2",
+    "@11ty/eleventy-plugin-rss": "1.1.2",
+    "d3-selection": "2.0.0",
+    "eleventy-plugin-fluid": "0.3.1",
+    "eleventy-plugin-pwa": "1.0.8",
+    "eleventy-plugin-sharp": "0.0.3",
+    "infusion": "4.0.0-FLUID-6605.20211110T225230Z.0692b7da3.FLUID-6605"
   }
 }
