--- a/package.json
+++ b/package.json
@@ -4,10 +4,8 @@
   "description": "Website for the Inclusive Design Research Centre.",
   "main": "eleventy.config.js",
   "scripts": {
-    "backstop:reference": "backstop reference --config=backstop.config.js",
-    "backstop:reference-docker": "backstop reference --docker --config=backstop.config.js",
-    "backstop:test": "backstop test --config=backstop.config.js",
-    "backstop:test-docker": "backstop test --docker --config=backstop.config.js",
+    "backstop:reference": "backstop reference --docker --config=backstop.config.js",
+    "backstop:test": "backstop test --docker --config=backstop.config.js",
     "backstop:approve": "backstop approve --config=backstop.config.js",
     "build:webpack": "mix --production",
     "build:eleventy": "cross-env ELEVENTY_ENV=production eleventy",
@@ -20,8 +18,8 @@
     "lint:css": "stylelint src/assets/styles/**/*.scss",
     "lint:js": "xo",
     "lint": "run-s lint:*",
-    "test:lint": "run-s lint:*",
-    "test:backstop": "run-s backstop:test",
+    "test:lint": "run-s lint",
+    "test:backstop": "start-server-and-test start http://localhost:8080 backstop:test",
     "test": "run-s test:*",
     "start": "npm-run-all -l clean build:bundle -p start:*",
     "start:webpack": "mix watch",
@@ -58,8 +56,8 @@
     "@commitlint/cli": "^13.2.1",
     "@commitlint/config-conventional": "^13.2.0",
     "@erquhart/rollup-plugin-node-builtins": "^2.1.5",
-    "backstopjs": "^5.4.4",
     "babel-loader": "^8.2.3",
+    "backstopjs": "^5.4.4",
     "cross-env": "^7.0.3",
     "dotenv": "^10.0.0",
     "eleventy-plugin-error-overlay": "^0.1.2",
@@ -87,6 +85,7 @@
     "sass": "^1.43.4",
     "sass-loader": "^12.3.0",
     "slugify": "^1.6.1",
+    "start-server-and-test": "^1.14.0",
     "stylelint": "^13.13.1",
     "stylelint-config-standard-scss": "^1.1.0",
     "stylelint-order": "^4.1.0",
