fix: allow UIO iframe

--- a/netlify.toml
+++ b/netlify.toml
@@ -14,5 +14,5 @@
   for = "/*"
   [headers.values]
     X-Content-Type-Options = "nosniff"
-    X-Frame-Options = "DENY"
+    X-Frame-Options = "SAMEORIGIN"
     X-XSS-Protection = "1; mode=block"
