--- a/package.json
+++ b/package.json
@@ -69,8 +69,8 @@
     "html-minifier": "^4.0.0",
     "husky": "^4.3.8",
     "image-size": "^1.0.0",
-    "jsdom": "^18.0.0",
     "laravel-mix": "^6.0.39",
+    "linkedom": "^0.13.0",
     "lint-staged": "^12.1.2",
     "move-file": "^2.1.0",
     "netlify-cms-proxy-server": "^1.3.21",
