--- a/package.json
+++ b/package.json
@@ -62,6 +62,8 @@
     "cross-env": "^7.0.3",
     "dotenv": "^10.0.0",
     "eleventy-plugin-error-overlay": "1.0.0",
+    "eslint": "8.26.0",
+    "eslint-plugin-react": "7.31.10",
     "glob": "^7.2.0",
     "html-minifier": "^4.0.0",
     "husky": "^4.3.8",
