--- a/src/projects/projects.json
+++ b/src/projects/projects.json
@@ -1,5 +1,5 @@
 {
 	"layout": "layouts/base.njk",
-	"permalink": "/projects/{{ title | slug }}/",
+	"permalink": "/projects/{{ title | slugify }}/",
 	"headerBgColor": "white"
 }
