feat: update projects, add Weavly and TAE (#405)

--- a/src/ideas/ideas.json
+++ b/src/ideas/ideas.json
@@ -1,7 +1,8 @@
 {
     "layout": "layouts/single--idea.njk",
-    "permalink": "/ideas/{{ title | slug }}/",
+    "permalink": "/ideas/{{ title | slugify }}/",
     "headerBgColor": "white",
     "author": "IDRC Team",
     "thumbnailImage": "/media/default.png"
 }
+    
