--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "debug": "DEBUG=Eleventy* eleventy",
     "dev": "cross-env ELEVENTY_ENV=development eleventy --serve",
     "lint:css": "stylelint src/assets/styles/**/*.scss",
-    "lint:js": "xo",
+    "lint:js": "eslint '**/*.js'",
     "lint": "run-s lint:*",
     "test:lint": "run-s lint",
     "test:backstop": "start-server-and-test start http://localhost:8080 backstop:test",
@@ -47,10 +47,10 @@
   },
   "lint-staged": {
     "src/assets/styles/**/*.scss": [
-      "stylelint"
+      "stylelint --fix"
     ],
     "src/assets/scripts/**/*.js": [
-      "xo"
+      "eslint --fix"
     ]
   },
   "devDependencies": {
@@ -61,10 +61,9 @@
     "backstopjs": "^6.0.4",
     "cross-env": "^7.0.3",
     "dotenv": "^10.0.0",
-    "eleventy-plugin-error-overlay": "^0.1.2",
-    "eslint-config-xo-react": "^0.25.0",
-    "eslint-plugin-react": "^7.31.8",
-    "eslint-plugin-react-hooks": "^4.2.0",
+    "eleventy-plugin-error-overlay": "1.0.0",
+    "eslint": "8.26.0",
+    "eslint-plugin-react": "7.31.10",
     "glob": "^7.2.0",
     "html-minifier": "^4.0.0",
     "husky": "^4.3.8",
@@ -87,20 +86,20 @@
     "sass-loader": "^12.3.0",
     "slugify": "^1.6.5",
     "start-server-and-test": "^1.14.0",
-    "stylelint": "^13.13.1",
-    "stylelint-config-standard-scss": "^1.1.0",
-    "stylelint-order": "^4.1.0",
-    "stylelint-scss": "^3.21.0",
-    "xo": "^0.39.1"
+    "stylelint": "^14.14.0",
+    "stylelint-config-fluid": "github:fluid-project/stylelint-config-fluid#8b6f7964ceb21acf690efb07b28fdda589ecfdd2",
+    "stylelint-config-standard-scss": "^6.0.0"
   },
   "dependencies": {
-    "@11ty/eleventy": "0.12.1",
+    "@11ty/eleventy": "1.0.0",
     "@11ty/eleventy-navigation": "0.3.2",
     "@11ty/eleventy-plugin-rss": "1.1.2",
     "d3-selection": "3.0.0",
-    "eleventy-plugin-fluid": "0.3.1",
+    "eleventy-plugin-fluid": "1.0.0",
     "eleventy-plugin-pwa": "1.0.8",
     "eleventy-plugin-sharp": "0.1.1",
-    "infusion": "4.0.0-dev.20211125T195630Z.60d4b3be8.main"
+    "eslint-config-fluid": "2.1.1",
+    "infusion": "4.0.0",
+    "stylelint-order": "5.0.0"
   }
 }
