GH-459: improve the preview contents at authoring

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -24,19 +24,13 @@
     },
     "overrides": [
         {
-            "files": "rollup.config.js",
-            "parserOptions": {
-                "sourceType": "module"
-            }
-        },
-        {
             "files": "src/assets/scripts/app.js",
             "parserOptions": {
                 "sourceType": "module"
             }
         },
         {
-            "files": "src/admin/util.js",
+            "files": "src/admin/previews.js",
             "parserOptions": {
                 "sourceType": "module"
             }
