--- a/package.json
+++ b/package.json
@@ -8,23 +8,21 @@
     "backstop:test": "backstop test --docker --config=backstop.config.js",
     "backstop:test:ci": "backstop test --config=backstop.config.js",
     "backstop:approve": "backstop approve --config=backstop.config.js",
+    "build": "npm-run-all -l clean build:*",
     "build:webpack": "mix --production",
     "build:eleventy": "cross-env ELEVENTY_ENV=production eleventy",
-    "build:bundle": "rollup --config",
-    "build": "npm-run-all -l clean build:*",
+    "build:cms": "node ./build-cms.js",
     "clean": "rimraf dist",
-    "cms": "netlify-cms-proxy-server",
     "debug": "DEBUG=Eleventy* eleventy",
-    "dev": "cross-env ELEVENTY_ENV=development eleventy --serve",
     "lint:css": "stylelint src/assets/styles/**/*.scss",
     "lint:js": "eslint '**/*.js'",
     "lint": "run-s lint:*",
     "test:lint": "run-s lint",
     "test:backstop": "start-server-and-test start http://localhost:8080 backstop:test",
     "test": "run-s test:*",
-    "start": "npm-run-all -l clean build:bundle -p start:*",
+    "start": "npm-run-all -l clean -p start:*",
     "start:webpack": "mix watch",
-    "start:eleventy": "run-p dev cms"
+    "start:eleventy": "concurrently \"cross-env ELEVENTY_ENV=development eleventy --serve\" \"node ./build-cms.js -w\" \"netlify-cms-proxy-server\""
   },
   "repository": {
     "type": "git",
@@ -56,18 +54,16 @@
   "devDependencies": {
     "@commitlint/cli": "^17.1.2",
     "@commitlint/config-conventional": "^17.1.0",
-    "@erquhart/rollup-plugin-node-builtins": "^2.1.5",
-    "babel-loader": "^8.2.5",
+    "@sindresorhus/slugify": "^2.1.1",
     "backstopjs": "^6.1.3",
+    "concurrently": "^7.6.0",
     "cross-env": "^7.0.3",
-    "dotenv": "^10.0.0",
     "eleventy-plugin-error-overlay": "1.0.0",
-    "eslint": "8.26.0",
-    "eslint-plugin-react": "7.31.10",
-    "glob": "^7.2.0",
+    "eslint": "8.29.0",
+    "eslint-plugin-react": "7.31.11",
+    "estrella": "^1.4.1",
     "html-minifier": "^4.0.0",
-    "husky": "^4.3.8",
-    "image-size": "^1.0.2",
+    "husky": "^8.0.2",
     "laravel-mix": "^6.0.49",
     "linkedom": "^0.14.19",
     "lint-staged": "^13.0.3",
@@ -75,16 +71,10 @@
     "netlify-cms-proxy-server": "^1.3.24",
     "npm-run-all": "^4.1.5",
     "nunjucks": "^3.2.3",
-    "postcss": "^8.4.18",
     "resolve-url-loader": "^5.0.0",
     "rimraf": "^3.0.2",
-    "rollup": "^2.60.2",
-    "rollup-plugin-commonjs": "^10.1.0",
-    "rollup-plugin-json": "^4.0.0",
-    "rollup-plugin-node-resolve": "^5.2.0",
-    "sass": "^1.44.0",
-    "sass-loader": "^12.3.0",
-    "slugify": "^1.6.5",
+    "sass": "^1.56.2",
+    "sass-loader": "^13.2.0",
     "start-server-and-test": "^1.14.0",
     "stylelint": "^14.14.0",
     "stylelint-config-fluid": "github:fluid-project/stylelint-config-fluid#8b6f7964ceb21acf690efb07b28fdda589ecfdd2",
@@ -99,7 +89,7 @@
     "eleventy-plugin-pwa": "1.0.8",
     "eleventy-plugin-sharp": "0.1.1",
     "eslint-config-fluid": "2.1.1",
-    "infusion": "4.5.0",
+    "infusion": "4.6.0",
     "stylelint-order": "5.0.0"
   }
 }
