--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "netlify-cms-proxy-server": "^1.3.24",
     "npm-run-all": "^4.1.5",
     "nunjucks": "^3.2.3",
+    "postcss": "^8.4.20",
     "resolve-url-loader": "^5.0.0",
     "rimraf": "^3.0.2",
     "sass": "^1.56.2",
