--- a/.github/workflows/backstop.yml
+++ b/.github/workflows/backstop.yml
@@ -57,7 +57,7 @@ jobs:
       if: always()
       id: retrieve-comment-body
       run: |
-          body=$(cat backstop_data/json_report/report.md)
+          body=$(cat backstop_data/json_report/jsonReport.json)
           body="${body//'%'/'%25'}"
           body="${body//$'\n'/'%0A'}"
           body="${body//$'\r'/'%0D'}"
