--- a/.github/workflows/backstop.yml
+++ b/.github/workflows/backstop.yml
@@ -11,7 +11,7 @@ jobs:
     - uses: actions/checkout@v2
     - uses: actions/setup-node@v2
       with:
-        node-version: '12'
+        node-version: '14'
     - name: Cache node modules
       uses: actions/cache@v1
       with:
@@ -57,7 +57,7 @@ jobs:
       if: always()
       id: retrieve-comment-body
       run: |
-          body=$(cat backstop_data/json_report/jsonReport.json)
+          body=$(cat backstop_data/json_report/report.md)
           body="${body//'%'/'%25'}"
           body="${body//$'\n'/'%0A'}"
           body="${body//$'\r'/'%0D'}"
