--- a/package.json
+++ b/package.json
@@ -51,12 +51,28 @@
       "eslint --fix"
     ]
   },
+  "dependencies": {
+    "@11ty/eleventy": "1.0.2",
+    "@11ty/eleventy-navigation": "0.3.5",
+    "@11ty/eleventy-plugin-rss": "1.2.0",
+    "concurrently": "^7.6.0",
+    "d3-selection": "3.0.0",
+    "eleventy-plugin-fluid": "1.0.0",
+    "eleventy-plugin-pwa": "1.0.8",
+    "eleventy-plugin-sharp": "0.1.1",
+    "eslint-config-fluid": "2.1.1",
+    "infusion": "4.6.0",
+    "markdown-it": "^13.0.1",
+    "npm-run-all": "^4.1.5",
+    "nunjucks": "^3.2.3",
+    "postcss": "^8.4.20",
+    "stylelint-order": "5.0.0"
+  },
   "devDependencies": {
     "@commitlint/cli": "^17.1.2",
     "@commitlint/config-conventional": "^17.1.0",
     "@sindresorhus/slugify": "^2.1.1",
     "backstopjs": "^6.1.3",
-    "concurrently": "^7.6.0",
     "cross-env": "^7.0.3",
     "eleventy-plugin-error-overlay": "1.0.0",
     "eslint": "8.29.0",
@@ -69,9 +85,6 @@
     "lint-staged": "^13.0.3",
     "move-file": "^2.1.0",
     "netlify-cms-proxy-server": "^1.3.24",
-    "npm-run-all": "^4.1.5",
-    "nunjucks": "^3.2.3",
-    "postcss": "^8.4.20",
     "resolve-url-loader": "^5.0.0",
     "rimraf": "^3.0.2",
     "sass": "^1.56.2",
@@ -80,17 +93,5 @@
     "stylelint": "^14.14.0",
     "stylelint-config-fluid": "github:fluid-project/stylelint-config-fluid#8b6f7964ceb21acf690efb07b28fdda589ecfdd2",
     "stylelint-config-standard-scss": "^6.0.0"
-  },
-  "dependencies": {
-    "@11ty/eleventy": "1.0.2",
-    "@11ty/eleventy-navigation": "0.3.5",
-    "@11ty/eleventy-plugin-rss": "1.2.0",
-    "d3-selection": "3.0.0",
-    "eleventy-plugin-fluid": "1.0.0",
-    "eleventy-plugin-pwa": "1.0.8",
-    "eleventy-plugin-sharp": "0.1.1",
-    "eslint-config-fluid": "2.1.1",
-    "infusion": "4.6.0",
-    "stylelint-order": "5.0.0"
   }
 }
